preparing for Java 9